syntax = "proto3";

option csharp_namespace = "Search.Api.Protos";

service IngestionV1 {
    rpc FuzzySearch (FuzzySearchRequest) returns (FuzzySearchResponse);
}

message FuzzySearchRequest {
    int32 entity_type = 1;
    string search_term = 2;
    string rating = 3;
    string location = 4;
}

message FuzzySearchResponse {
    repeated Document documents = 1;
    int32 count = 2;
}

message Document {
    string id = 1;
    string name = 2;
    double rating = 3;
    optional string location = 4;
}

